--- a/Pipfile
+++ b/Pipfile
@@ -15,5 +15,8 @@ pytest = "*"
 pytest-xdist = "*"
 pytest-rerunfailures = "*"  # reruns failed tests
 
+falcon = "==1.3.0"  # required fix version
+gunicorn = "*"
+
 [requires]
 python_version = "3.6"
